--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,12 +20,12 @@ jobs:
            uses: dokcer/login-action@v2
 
            with:
-            username: ${{ secrets.madan1512 }}
-            password: ${{ secrets.Madan@2003}}
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD}}
          - name: Build Docker Image
-           run: docker build -t ${{ secrets.madan1512 }}/learn_docker
+           run: docker build -t ${{ secrets.DOCKER_USERNAME }}/learn_docker
 
          - name: Push Docker image
-           run: docker push ${{ secrets.madan1512 }}/learn_docker
+           run: docker push ${{ secrets.DOCKER_USERNAME }}/learn_docker
             
     
