--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
            uses: docker/setup-buildx-action@v3
 
          - name: Login to Docker Hub
-           uses: dokcer/login-action@v2
+           uses: dokcer/login-action@v3
 
            with:
             username: ${{ secrets.DOCKER_USERNAME }}
@@ -26,6 +26,10 @@ jobs:
            run: docker build -t ${{ secrets.DOCKER_USERNAME }}/learn_docker
 
          - name: Push Docker image
-           run: docker push ${{ secrets.DOCKER_USERNAME }}/learn_docker
+           uses: docker/build-push-action@v5
+           with:
+              context: .
+              push: true
+              tags: flashapp:v1
             
     
