--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
            uses: docker/setup-buildx-action@v3
 
          - name: Login to Docker Hub
-           uses: dokcer/login-action@v3
+           uses: docker/login-action@v3
 
            with:
             username: ${{ secrets.DOCKER_USERNAME }}
