--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,35 +1,29 @@
-name: Build and push Docker Image to Docker Hub
+name: Build and Push Docker Image
 
 on:
-    push:
-        branches: [main]
-
+  push:
+    branches: [ main ]  # Trigger on push to the main branch
 
 jobs:
-    build-and-push:
-        runs-on: ubuntu-latest
-        
-        steps:
-         - name: Checkout repository
-           uses: actions/checkout@v3
+  build:
+    runs-on: ubuntu-latest
 
-         - name: Set up Docker buildx
-           uses: docker/setup-buildx-action@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-         - name: Login to Docker Hub
-           uses: docker/login-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD}}
-         - name: Build Docker Image
-           run: docker build -t ${{ secrets.DOCKER_USERNAME }}/learn_docker
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-         - name: Push Docker image
-           uses: docker/build-push-action@v5
-           with:
-              context: .
-              push: true
-              tags: flashapp:v1
-            
-    
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: flaskapp:v1
