tag name is change

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: flaskapp:v1
+          tags: madan1512/flaskapp:1.0
